deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-go-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-go-app # This label must match the pod template labels
  template:
    metadata:
      labels:
        app: my-go-app #pod label
    spec:
      containers:
        - name: my-go-app
          image: ramkumar100/my-go-app:latest
          ports:
           - containerPort: 2000 # The port that the application inside the container listens on
          resources:
             requests:
               cpu: "200m"
             limits:
               cpu: "500m"
          volumeMounts:
            - name: shared-logs
              mountPath: /data # Path inside the container where the volume will be mounted
        - name: log-watcher
          image: busybox
          command: ["/bin/sh", "-c", "tail -f /data/output.txt"]
          volumeMounts:
            - name: shared-logs
              mountPath: /data
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: my-go-app-pvc # Reference to the PersistentVolumeClaim
